# Forager

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Forager.cbp  Forager.depend  Forager.layout  README.md  index.html  perf.sh
.github/workflows/: deploy.yml
assets/data/: biomes.xml  tiles.json  tiles.xml
assets/data/shaders/: toon.frag  toon.vert  water.frag
assets/models/: cube.blend  tree.blend
assets/shaders/: sky.frag  textured.frag  textured.vert
assets/shaders/core/: sky.frag  textured.frag  textured.vert
assets/shaders/es/: sky.frag  sky.vert  textured.frag  textured.vert
include/: GLShader.h  audio_3d.h  biome.h  biome_manager.h  chunk.h  coordinate.h  globals.h  ids.h  image_manager.h  material_manager.h  model.h  model_loader.h  player.h  quick_primatives.h  skybox.h  tile.h  tile_map.h  tile_type.h  tile_type_manager.h  tools.h
include/rapidxml/: rapidxml_print.hpp
src/: Audio3d.cpp  BiomeManager.cpp  BiomeManager.h  GLShader.cpp  GLShader.h  ModelLoader.cpp  ModelLoader.h  TileMap.cpp  TileMap.h  TileType.cpp  TileType.h  TileTypeManager.cpp  TileTypeManager.h  audio_3d.cpp  audio_3d.h  biome.cpp  biome.h  biome_manager.cpp  biome_manager.h  chunk.cpp  chunk.h  coordinate.cpp  coordinate.h  globals.cpp  globals.h  ids.h  image_manager.cpp  image_manager.h  main.cpp  material_manager.cpp  material_manager.h  model.cpp  model.h  model_loader.cpp  model_loader.h  player.cpp  player.h  quick_primatives.cpp  quick_primatives.h  skybox.cpp  (+11 more)
src/constants/: globals.cpp  globals.h  ids.h
src/core/: Audio3d.cpp  Audio3d.h  Camera.h  GpuProgram.cpp  GpuProgram.h  Logger.cpp  Logger.h  Model.cpp  Model.h  ShaderManager.h
src/game/: Biome.cpp  Biome.h  BiomeManager.cpp  BiomeManager.h  Chunk.cpp  Chunk.h  ChunkMap.cpp  ChunkMap.h  ChunkMesh.cpp  ChunkMesh.h  CubeFaces.cpp  CubeFaces.h  MaterialManager.cpp  Player.cpp  Player.h  Skybox.cpp  Skybox.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  TileType.cpp  TileType.h  TileTypeManager.cpp  TileTypeManager.h  Voxel.cpp  Voxel.h  World.cpp  World.h
src/rapidxml/: rapidxml.hpp  rapidxml_print.hpp
src/render/: gl_utils.h  gpu_program.cpp  gpu_program.h  gpu_program_manager.h
src/state/: game.cpp  game.h  init.cpp  init.h  state.h
src/utils/: gl.h  loaders.cpp  loaders.h  model-loader.cpp  model-loader.h  quick-primatives.cpp  quick-primatives.h  shader.cpp  shader.h  utils.cpp  utils.h
